--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     
     <dependencies>
         
-        <dependency>
+        <!--        <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
             <version>0.11.2</version>
@@ -28,13 +28,32 @@
             <artifactId>jjwt-impl</artifactId>
             <version>0.11.2</version>
             <scope>runtime</scope>
-        </dependency>
+        </dependency>-->
         <!--        <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>  or jjwt-gson if Gson is preferred 
             <version>0.11.2</version>
             <scope>runtime</scope>
         </dependency>-->
+        
+        <!--        <dependency>
+            <groupId>org.imixs.jwt</groupId>
+            <artifactId>imixs-jwt</artifactId>
+            <version>1.0.0</version>
+        </dependency>-->
+        
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>29.0-jre</version>
+        </dependency>
+
+        
+        <dependency>
+            <groupId>org.imixs.jwt</groupId>
+            <artifactId>imixs-jwt</artifactId>
+            <version>1.1.0</version>
+        </dependency>
         
         <dependency>
             <groupId>com.google.code.gson</groupId>
